add analysis of depleted international classes; tweaks to regression output

--- a/the_new_trademark_complexity.tex
+++ b/the_new_trademark_complexity.tex
@@ -448,17 +448,17 @@ One possible reason for this phenomenon is that it represents a legal strategy. 
 
 Conventional wisdom may also support that account. When a client seeks to register a word mark that risks a rejection by the USPTO for being nondistinctive, trademark lawyers routinely suggest that the client combine the work mark with a nonverbal, visual element in order to reduce that risk.\footnote{[Cites.] \url{https://www.cll.com/OnMyMindBlog/adding-a-word-or-distinctive-design-to-a-mark-sometimes-can-avoid-a-likelihood-of-confusion}; \url{https://smithhopen.com/2020/12/01/the-right-to-your-name/}; cf. Fromer \& McKenna. Lawyers who make this suggestion will also generally note that the client should be open to including a disclaimer of the mark's verbal element, if the USPTO expresses the view that the matter should be disclaimed.} The logic here is that adding a visual element to a word mark subjects the mark to the \textit{Seabrook} analysis, because the mark is now not only a string of characters but a design as well. And as long as that design is not exceedingly common, \textit{Seabrook} is a relatively permissive test. This logic is only one step away from a strategy of adding more visual elements to a nonword mark (as opposed to a word mark) in order to increase its chances of receiving USPTO approval.
 
-Indeed, the data suggest such a strategy could be effective. To test whether more complex word marks have improved odds of receiving USPTO approval, I estimate a logistic regression of the form \
+Indeed, the data suggest such a strategy could be effective. To test whether more complex word marks have better odds of receiving USPTO approval, I estimate a logistic regression of the form \
 \begin{equation}
 \log{\frac{P}{1-P}}=\beta_0+\beta_1highcode_i+\beta_2X_i
 \end{equation}
-where $P$ is the probability that the application was approved, $highcode_i$ is an indicator variable that equals 1 if application $i$ has more than 5 codes (i.e., is a high-code mark) and 0 otherwise, and $X_i$ is a vector of controls for (1) whether application $i$ was filed by an attorney or pro se, (2) the 5-year period in which application $i$ was filed, and (3) the international classes of goods/services in which application $i$ was filed. I cluster standard errors by 5-year period to account for the possibility of similar treatment of nonword marks at similar times in the USPTO's institutional development. I also exclude any applications filed in 2022 or later, because, as noted, there is a nontrivial number of applications filed in the last couple of years on which the USPTO has not yet reached a final decision. Table~\ref{table:1} shows the intercept and coefficient of this regression model under this specification:
+where $P$ is the probability that the application was approved, $highcode_i$ is an indicator variable that equals 1 if application $i$ has more than 5 codes (i.e., is a high-code mark) and 0 otherwise, and $X_i$ is a vector of controls for (1) whether application $i$ was filed by an attorney or pro se, (2) the 5-year period in which application $i$ was filed, and (3) the international classes of goods/services in which application $i$ was filed. I cluster standard errors by 5-year period to account for the possibility of similar treatment of nonword marks at similar times in the USPTO's institutional development. I also exclude any applications filed in 2022 or later, because, as noted, there is a nontrivial number of applications filed in the last couple of years on which the USPTO has not yet reached a final decision. Table~\ref{table:1} shows the intercept and value of $\beta_1$ of this regression model under this specification:
 
 \input{table_1.tex} \par
 
-\noindent In the table above, the ``estimate'' value of n indicates that, holding everything else constant, have more than five design search codes increases an application's odds of USPTO approval by about $e^[0.1462]-1 \approx [16]\%$. This increase is highly statistically significant (with a p-value of 0.000), although the absolute percentage change ($\sim15\%$) is not overwhelming. However, that percentage can be quite substantial in context. Imagine an application has 9 to 10 odds of approval (or roughly a 47\% chance of approval). Increasing those odds by 15\%—resulting in odds of 10.35 to 10—makes that application more likely to be approved than not approved. In other words, having a high number of codes can substantially better an applicant's odds of receiving USPTO approval. Given these results, it at least plausible that the recent increase in marks with high numbers of design codes represents a strategy by applicants to increase their odds of approval and registration. 
+\noindent In the table above, the ``estimate'' value of n indicates that, holding everything else constant, having more than five design search codes increases an application's odds of USPTO approval by about $e^[0.1462]-1 \approx [16]\%$. This increase is highly statistically significant (with a p-value of 0.000), although the absolute percentage change ($\sim15\%$) is not overwhelming. However, that percentage can be critical in the right context. Imagine an application has 9 to 10 odds of approval, representing roughly a 47\% probability of approval. Increasing those odds by 15\%—resulting in odds of 10.35 to 10—increases its probability of approval to 51\%. Given these results, it at least plausible that the recent increase in high-code applications represents a strategy by applicants to increase their odds of approval and registration. 
 
-But this strategy doesn't explain everything. \textit{Seabrook} was decided in 1977, about a decade before the beginning of the time period examined in my empirical analysis. It doesn't take much trial-and-error to figure out that (1) \textit{Seabrook} effectively says that unusual nonword marks are likelier to be registered, and (2) one way to make a mark unusual is to add more things to that mark. Thus, one might expect that a strategy of packing visual elements into a mark would take off as soon as a few applicants realized it worked. And that strategy would then remain popular—that is, applicants would employ that strategy at roughly consistent rates—as long as the law remains the same.\footnote{Somewhat analogously, consider that there were pronounced increases (1) in applications for color marks after the Supreme Court's decision in \textit{Qualitex}, which held that colors could be marks upon a showing of secondary meaning, and (2) in LGBTQ+-oriented applications in the years immediately following the Supreme Court's decision in \textit{Matal v. Tam}, which struck down the Lanham Act's prior prohibition on the registration of ``disparag[ing]'' marks. \textit{Owning Colors}, \textit{supra} note~\ref{surpa23}, at [X]; Michael Goodyear, \textit{Queer Trademarks}, 2024 \textsc{U. Ill. L. Rev.} 163.} But that's not what we see at all. Instead, Figure~\ref{fig:7} shows that marks with the highest number of design search codes seem, first, to moderately \textit{decrease} as a percentage of total applications during the late '80s and early '90s, after which they pick up substantially. Although it's possible that this is the natural pattern by which applicants adopted a visual element–packing strategy, it seems likelier that other factors are at play.
+But this strategy doesn't explain everything. \textit{Seabrook} was decided in 1977, about a decade before the beginning of the time period examined in my empirical analysis. It doesn't take much trial-and-error to figure out that (1) \textit{Seabrook} effectively says that unusual nonword marks are likelier to be registered, and (2) one way to make a mark unusual is to add more things to that mark. Thus, one might expect that a strategy of packing visual elements into a mark would take off as soon as a few applicants realized it worked. And that strategy would then remain popular—that is, applicants would employ that strategy at roughly consistent rates—as long as the law remains the same.\footnote{Somewhat analogously, consider that there were pronounced increases (1) in applications for color marks after the Supreme Court's decision in \textit{Qualitex}, which held that colors could be marks upon a showing of secondary meaning, and (2) in LGBTQ+-oriented applications in the years immediately following the Supreme Court's decision in \textit{Matal v. Tam}, which struck down the Lanham Act's prior prohibition on the registration of ``disparag[ing]'' marks. \textit{Owning Colors}, \textit{supra} note~\ref{surpa23}, at [X]; Michael Goodyear, \textit{Queer Trademarks}, 2024 \textsc{U. Ill. L. Rev.} 163.} But that's not what we see at all. Instead, Figure~\ref{fig:6} shows that marks with the highest number of design search codes seem, first, to moderately \textit{decrease} as a percentage of total applications during the late '80s and early '90s, after which they pick up substantially. Although it's possible that this is the natural pattern by which applicants adopted a visual element–packing strategy, it seems likelier that other factors are at play.
 
 Context strongly suggests one such factor is the dramatic increase in total numbers of trademark filings in recent decade. As discussed, applications for word marks have driven that increase. But as applicants file for word marks at increasingly elevated levels, they are also filing for highly complex nonword marks at increasingly elevated levels. Figure~\ref{fig:8} gives an impressionistic sense of this trend by superimposing the yearly proportion of nonword marks with greater than 10 or greater than 15 codes over the yearly number of trademark applications.
 
@@ -472,9 +472,14 @@ Context strongly suggests one such factor is the dramatic increase in total numb
 
 As the next Section discusses further, one compelling way to understand this pattern is as the result of a fundamental shift in the branding environment—and, indeed, in the broader aesthetic environment. In particular, qualitative accounts of branding trends in recent years suggest that, as ever-growing numbers of word marks have saturated trademarks' linguistic territory, business have come to focus more on nonverbal branding elements as a way to distinguish themselves. In other words, as less and less of the domain of words is available to be claimed as a mark, businesses' focus on creating unique, memorable trademarks may intensifying within the domain of the visual, leading to a greater emphasis on claiming specific images, shapes, and patterns as marks.
 
-It is not straightforward, however, to test this causal thesis. The yearly numbers of nonword trademarks, high-code marks, and all trademarks in general have each increased over time. The correspondence among them reflects a general increase in filings more than it reflects the effect of the increase in one type of filing on another type of filing.
+It is not straightforward, however, to test this causal thesis. The yearly numbers of nonword trademarks, high-code marks, and all trademarks in general have each increased over time. In all likelihood, the correspondence among them reflects a general increase in filings more than it reflects the effect of one type of filing on another type of filing. Indeed, these trends could all be linked to continued U.S. economic growth and the increasing importance of intangible assets, even if certain incentives for filing trademark applications—e.g., inclusion in Amazon's Brand Registry, appropriation of a widely used phrase—do not apply to nonword marks.
 
-[To come: writeup of increase in numbers of applications for high-code marks in international classes where depletion of wordmarks is severe; writeup of robustness checks.]
+Nonetheless, the data provide clues that, while not probative, suggest that the rise in high-code marks is related to the pronounced increase in word-mark filings. In particular, we can capitalize on the fact that desirable marks are scarcer in certain sectors of the economy (as represented by the international classes of goods/services the USPTO uses to categorize marks) than others. Among those sectors are the following ``important classes experiencing especially severe depletion: Class 9 (electronic goods), Class 25 (apparel goods), Class 35 (general business administration services), Class 41 (education, entertainment, and cultural and sporting activities services), and Class 42 (computer-related services).'' If word-mark depletion were driving the increase in high-code marks, we might expect that high-code marks have become more frequent in these sectors as businesses in them begin to expand into nonword marks.
+
+The data is consistent with that narrative—though, again, the availability of a causal inference remains limited. The top five filers of high-code marks are Disney Enterprises, Inc., Microsoft Corporation, Summit Entertainment, LLC, E. \&J. Gallo Winery (the largest wine producer in the world), and Societe des Produits Nestle S.A. Of all 42 international classes, the international class in which these firms filed the most applications (both word and nonword) from 1986 through 2023 was Class 9 (2,197 applications), with Class 41 in third place (1,488), Class 25 in seventh place (851), Class 42 in ninth place (639), and Class 35 in eleventh place (490). In other words, the firms that file the most high-code marks are also frequently filing applications in sectors of the economy where word marks are severely depleted—indeed, the sector in which they file the most applications is severely depleted.\footnote{For comparison, the top five filers across all types of filings—whether for non-word marks or otherwise—are Mattel, Inc., Disney Enterprises, Inc., Novartis AG, Glaxo Group Limited, and Hasbro, Inc. The international class in which these firms filed the most applications (both word and nonword) during the examined time period is, unsurprisingly, Class 28 (toys) (19,899 applications). Class 41 falls in third place (2,075 applications), Class 9 in fourth (1,868), Class 25 in sixth (11,64), Class 35 in sixteenth (391), and Class 42 in seventeenth (350).} However, these facts are less impressive given that Classes 9, 25, 35, 41, and 42 are simply the most popular five classes for \textit{all} applications, which could suggest that high-code marks would appear frequently in these sectors of the economy, regardless of whether word marks are particularly depleted in those sectors. Similarly, Classes 9, 25, 35, and 41 are all among the top ten classes in which the percentage change in number of high-code marks filed per year was greatest between 1986 and 2023, indicating that the gross numbers of high-code marks in those international classes grew faster than they did in more than three-quarters of the other classes.\footnote{With the twenty-seventh greatest percentage change between 1986 and 2023, Class 42 certainly breaks with the rest of the cadre of highly-depleted classes in this regard.} This is particularly remarkable given that only Classes 35 and 41 are in the top ten classes where the percentage change for \textit{all} applications was greatest between 1986 and 2023. Given that difference, one might that high-code marks have, over time, become more popular in sectors experiencing severe depletion.
+
+
+
 
 \subsection{The New Trademark Complexity}\label{subsec:2C}
 
